--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <hr class="hori-rule">
       <div class="contact-me">
         <h2 class="contact">Get In Touch</h2>
-        <a class="btn" href="dhruv.kheni3@gmail.com">CONTACT ME</a>
+        <a class="btn" href="mailto:dhruv.kheni3@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
