--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="images/programmer.png" alt="my-image">
         <h2 class="frst">Hello.</h2>
 
-          <p class="hello">I am a Computer Engineering student currently in Second Year at <a href="tsec.edu">Thadomal College</a>.I love playing video games and travelling.<br>
+          <p class="hello">I am a Computer Engineering student currently in Second Year at <a href="https://tsec.edu">Thadomal College</a>.I love playing video games and travelling.<br>
             I am also an avid Tech and Car Enthuciast.
           </p>
 
